# freecode

./: .env.example  README.md  install.ps1  pyproject.toml
freeagent/: __init__.py  cli.py  config.py  llm.py  ui.py
website/: index.html  install.js  styles.css
