[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "freeagent"
version = "0.3.0"
description = "FreeAgent — an open-source terminal coding agent. Free models (z.ai, Groq, OpenRouter, Ollama) and paid frontier models (OpenAI, Anthropic, Gemini) behind one CLI. Permission gating, bypass mode, inline key recovery, GitHub + Vercel integration."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Vasily Sahrai" }]
requires-python = ">=3.9"
keywords = ["ai", "agent", "cli", "coding-assistant", "z.ai", "glm", "groq", "openrouter", "open-source"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development",
]
dependencies = [
  "openai>=1.40.0",
  "rich>=13.7.0",
  "prompt_toolkit>=3.0.47",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vasilysahrai/freeagent"
Repository = "https://github.com/vasilysahrai/freeagent"
Issues = "https://github.com/vasilysahrai/freeagent/issues"

[project.scripts]
freeagent = "freeagent.cli:main"
fa = "freeagent.cli:main"

[tool.setuptools.packages.find]
include = ["freeagent*"]
